apps/lidarr/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
spec:
  template:
    spec:
      containers:
        - name: lidarr
          ports:
            - name: https
              containerPort: 6868
          readinessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          livenessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          startupProbe:
            httpGet:
              port: https
              scheme: HTTPS
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: lidarr-tls
            items:
              - key: keystore.p12
                path: keystore.p12
                mode: 0640
