apps/lidarr/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  ports:
    - name: https
      port: 6868
      targetPort: https
